# google-adk-ur-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: agent.py  config.py
src/config/: __init__.py
src/preprocessing/: main.py
src/tools/: __init__.py  corpus_tools.py  extract_information.py  generate_user_requirement.py  generate_user_requirements.py  storage_tools.py  update_user_requirements.py
